Update .travis.yml to crossbuild

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ scala:
   - 2.11.6
 
 script:
-  - sbt clean compile tut coverage test
+  - sbt +clean +compile +tut +coverage +test
 
 after_success:
   - codecov
